# tauri-extensions

./: .gitignore  Cargo.toml  README.md  build.rs
.javascript/: show_window.js
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: lib.rs  plugin.rs  utils.rs
src/router/: mod.rs  parser.rs  routing.rs  routing_async.rs
src/router/_old/: create_router.rs  create_router_v2.rs  lib.rs  parser.rs  routing.rs
src/router/fdsfsf/: routing.rs
src/templates/: mod.rs
src/templates/___old/: mod.rs
src/themes/: github_adapter.rs  mod.rs
