[package]
name = "tauri-extensions"
links = "tauri-extensions"
version = "0.1.0"
edition = "2021"
description = "tauri plugin for ui svg icons"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blockz-code/ffbins-rs"
readme = "README.md"
keywords = ["ui", "icons", "tauri", "js", "svg"]
categories = ["development-tools"]
authors = ["p1mo <101986259+p1mo@users.noreply.github.com>"]

[lints.rust]
unsafe_code     = "forbid"
unused          = "allow"

[features]
all = ["wins", "enhance", "router", "templates", "themes"]
wins = []
enhance = []
router = []
templates = ["dep:handlebars","dep:walkdir"]
themes = ["dep:include_dir"]

[build-dependencies]
tauri-plugin = { version = "2.0.5", features = [ "build" ] }

[dependencies]
tauri       = { version = "2.3.1", features = [ "unstable" ] }
tauri-runtime = "2.4.0"
# Tauri Plugins


# Other Deps
serde       = { version = "1.0.201", features = ["derive"] }
serde_json  = "1.0.117"
thiserror   = "2.0.12"
bincode     = "2.0.1"
futures-util = "0.3.31"

percent-encoding = "2.3.1"
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }

futures = "0.3.30"
tokio = { version = "1.44.0", features = ["full"] }

# Themes
include_dir = { version = "0.7.3", optional = true }

# Templates
handlebars  = { version = "6.3.1", optional = true }
walkdir = { version = "2.5.0", optional = true }